[project]
name = "lorabel"
version = "0.1.0"
description = "hermal Background Reduction for Mid-Infrared Imaging by Low-Rank Background and Sparse Point Source Modelling"
authors = [
    {name = "Roger A.R. Moens",email = "rogermoens@delfius.nl"}
]
license = {text = "BSD-3-Clause"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.7"
unipy = { git = "https://github.com/vandeplaslab/unipy.git", rev = "main" }
