[project]
name = "lorabel"
version = "0.1.0"
description = ""
authors = [
    {name = "Roger A.R. Moens",email = "rogermoens@delfius.nl"}
]
license = {text = "BSD-3-Clause"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.poetry]
packages = [{include = "lorabel", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
